전체 기본 구조 작성

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="./style.css" />
     </head>
-    <body></body>
+    <body>
+        <div class="wrapper">
+            <div class="wrapper_top">wrapper1</div>
+        </div>
+        <div class="wrapper">
+            <div class="wrapper_bottom">wrapper2</div>
+        </div>
+    </body>
 </html>
