기본 구조 마크업 수정

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
         <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
-        <div class="wrapper">
-            <div class="wrapper_top">wrapper1</div>
+        <div class="wrapper_top">
+            <div class="wrapper">wrapper1</div>
         </div>
-        <div class="wrapper">
-            <div class="wrapper_bottom">wrapper2</div>
+
+        <div class="wrapper_bottom">
+            <div class="wrapper">wrapper2</div>
         </div>
     </body>
 </html>
