--- a/index.html
+++ b/index.html
@@ -5,14 +5,32 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
         <link rel="stylesheet" href="./style.css" />
+        <style>
+            @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+        </style>
     </head>
     <body>
         <div class="wrapper_top">
-            <div class="wrapper">wrapper1</div>
+            <div class="wrapper">
+                <div class="contents">
+                    <header class="contents_hedaer">
+                        <h1>START YOUR PORTFOLIO PROJECT</h1>
+                        <p>
+                            Lorem Ipsum is simply dummy text of the printing and
+                            typesetting industry. Lorem Ipsum has been the
+                            industry's standard dummy text ever since the 1500s,
+                            when an unknown printer took a galley of type and
+                            scrambled
+                        </p>
+                    </header>
+                </div>
+            </div>
         </div>
 
         <div class="wrapper_bottom">
-            <div class="wrapper">wrapper2</div>
+            <div class="wrapper">
+                <div class="contents">wrapper2</div>
+            </div>
         </div>
     </body>
 </html>
