header 기본 구조 작성

--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
         <div class="wrapper_top">
             <div class="wrapper">
                 <div class="contents">
-                    <header class="contents_hedaer">
-                        <h1>START YOUR PORTFOLIO PROJECT</h1>
-                        <p>
-                            Lorem Ipsum is simply dummy text of the printing and
-                            typesetting industry. Lorem Ipsum has been the
-                            industry's standard dummy text ever since the 1500s,
-                            when an unknown printer took a galley of type and
-                            scrambled
-                        </p>
+                    <header class="contents_header">
+                        <h1>START YOUR <strong>PORTFOLIO PROJECT</strong></h1>
+                        <div>
+                            <p>
+                                Lorem Ipsum is simply dummy text of the printing
+                                and typesetting industry. Lorem Ipsum has been
+                                the industry's standard dummy text ever since
+                                the 1500s, when an unknown printer took a galley
+                                of type and scrambled
+                            </p>
+                        </div>
                     </header>
                 </div>
             </div>
