--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
             <div class="wrapper">
                 <div class="contents">
                     <header class="contents_header">
-                        <h1>START YOUR <strong>PORTFOLIO PROJECT</strong></h1>
+                        <h1>
+                            START YOUR
+                            <strong>PORTFOLIO</strong>
+                            <strong>PROJECT</strong>
+                        </h1>
                         <div>
                             <p>
                                 Lorem Ipsum is simply dummy text of the printing
