top card 부분 그리드 잡음

--- a/index.html
+++ b/index.html
@@ -29,6 +29,26 @@
                             </p>
                         </div>
                     </header>
+                    <div class="card_wrapper">
+                        <section class="card">
+                            <img src="./images/photo01 2.png" alt="" />
+                            <div>
+                                <h2>Take a rest</h2>
+                                <ul>
+                                    <li>
+                                        It has survived not only five centuries.
+                                    </li>
+                                    <li>Why do we use it?</li>
+                                    <li>
+                                        Contrary to popular belief, Lorem Ipsum
+                                        is not simply random text. It has root.
+                                    </li>
+                                </ul>
+                            </div>
+                        </section>
+                        <section class="card">1</section>
+                        <section class="card">1</section>
+                    </div>
                 </div>
             </div>
         </div>
