card 내부 스타일링

--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
                     </header>
                     <div class="card_wrapper">
                         <section class="card">
-                            <img src="./images/photo01 2.png" alt="" />
-                            <div>
+                            <div class="card-img">
+                                <img src="./images/photo01 2.png" alt="" />
+                                <div>Rest</div>
+                            </div>
+                            <div class="card-text">
                                 <h2>Take a rest</h2>
                                 <ul>
                                     <li>
