이미지 내부 글자 마크업 변경

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                         <section class="card">
                             <div class="card-img">
                                 <img src="./images/photo01 2.png" alt="" />
+                                <div>Rest</div>
                             </div>
                             <div class="card-text">
                                 <h2>Take a rest</h2>
@@ -48,8 +49,47 @@
                                 </ul>
                             </div>
                         </section>
-                        <section class="card">1</section>
-                        <section class="card">1</section>
+                        <section class="card">
+                            <div class="card-img">
+                                <img src="./images/photo02 2.png" alt="" />
+                            </div>
+                            <div class="card-text">
+                                <h2>Build something</h2>
+                                <ul>
+                                    <li>
+                                        There are many variations of passages of
+                                        Lorem Ipsum available.
+                                    </li>
+                                    <li>
+                                        If you are going to use a passage of
+                                        Lorem Ipsum.
+                                    </li>
+                                    <li>
+                                        The standard chunk of Lorem Ipsum used
+                                        since the 1500s is reproduced below for
+                                        those interested.
+                                    </li>
+                                </ul>
+                            </div>
+                        </section>
+                        <section class="card">
+                            <div class="card-img">
+                                <img src="./images/photo01 2.png" alt="" />
+                            </div>
+                            <div class="card-text">
+                                <h2>Take a rest</h2>
+                                <ul>
+                                    <li>
+                                        It has survived not only five centuries.
+                                    </li>
+                                    <li>Why do we use it?</li>
+                                    <li>
+                                        Contrary to popular belief, Lorem Ipsum
+                                        is not simply random text. It has root.
+                                    </li>
+                                </ul>
+                            </div>
+                        </section>
                     </div>
                 </div>
             </div>
