--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                         <section class="card">
                             <div class="card-img">
                                 <img src="./images/photo02 2.png" alt="" />
+                                <div>Craft</div>
                             </div>
                             <div class="card-text">
                                 <h2>Build something</h2>
@@ -74,18 +75,26 @@
                         </section>
                         <section class="card">
                             <div class="card-img">
-                                <img src="./images/photo01 2.png" alt="" />
+                                <img src="./images/photo03 2.png" alt="" />
+                                <div>Scrap</div>
                             </div>
                             <div class="card-text">
-                                <h2>Take a rest</h2>
+                                <h2>Reference</h2>
                                 <ul>
                                     <li>
-                                        It has survived not only five centuries.
+                                        Once is therefore always free form
+                                        repetition, injected humor, or
+                                        non-characterisic words etc.
                                     </li>
-                                    <li>Why do we use it?</li>
                                     <li>
-                                        Contrary to popular belief, Lorem Ipsum
-                                        is not simply random text. It has root.
+                                        Predefined chunks as necessary, making
+                                        this the first true generator on the
+                                        internet.
+                                    </li>
+                                    <li>
+                                        Finibus Bonorum et Malorum by Cicero are
+                                        also reproduced in their exact original
+                                        form.
                                     </li>
                                 </ul>
                             </div>
