media query 추가 및 마크업 구조 살짝 경

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                         <section class="card">
                             <div class="card-img">
                                 <img src="./images/photo01 2.png" alt="" />
-                                <div>Rest</div>
+                                <div class="img-back">
+                                    <h2>Rest</h2>
+                                </div>
                             </div>
                             <div class="card-text">
                                 <h2>Take a rest</h2>
@@ -52,7 +54,9 @@
                         <section class="card">
                             <div class="card-img">
                                 <img src="./images/photo02 2.png" alt="" />
-                                <div>Craft</div>
+                                <div class="img-back">
+                                    <h2>Craft</h2>
+                                </div>
                             </div>
                             <div class="card-text">
                                 <h2>Build something</h2>
@@ -76,7 +80,9 @@
                         <section class="card">
                             <div class="card-img">
                                 <img src="./images/photo03 2.png" alt="" />
-                                <div>Scrap</div>
+                                <div class="img-back">
+                                    <h2>Scrap</h2>
+                                </div>
                             </div>
                             <div class="card-text">
                                 <h2>Reference</h2>
