bottom 컨텐츠 만듬

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <body>
         <div class="wrapper_top">
             <div class="wrapper">
-                <div class="contents">
+                <div class="contents_top">
                     <header class="contents_header">
                         <h1>
-                            START YOUR
-                            <strong>PORTFOLIO</strong>
+                            START YOUR <br />
+                            <strong>PORTFOLIO</strong><br />
                             <strong>PROJECT</strong>
                         </h1>
                         <div>
@@ -112,7 +112,123 @@
 
         <div class="wrapper_bottom">
             <div class="wrapper">
-                <div class="contents">wrapper2</div>
+                <div class="contents_bottom">
+                    <header class="contents_header">
+                        <h1>
+                            CALENDAR AND <br />
+                            <strong>EVENT TOOLS</strong>
+                        </h1>
+                        <button class="add_btn">+ ADD TO CALENDAR</button>
+                    </header>
+                    <div class="card_wrapper">
+                        <section class="contents_list">
+                            <div class="list_img">
+                                <img src="./images/cover01.png" alt="" />
+                            </div>
+                            <div class="list_main">
+                                <ul class="list_tag">
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>JavaScript</li>
+                                </ul>
+                                <h2 class="list_title">
+                                    Digital Workplace Experience
+                                </h2>
+                                <p class="list_text">
+                                    It is a long established fact that a reader
+                                    will be distracted by the readable content
+                                    of a page when looking at its layout. The
+                                    point of using Lorem Ipsum is that it has a
+                                    more-or-less normal distribution of letters.
+                                </p>
+                            </div>
+                            <div class="list_footer">
+                                <div class="footer_contents">
+                                    <div class="footer_text">CLOSED</div>
+                                </div>
+                            </div>
+                        </section>
+                        <section class="contents_list">
+                            <div class="list_img">
+                                <img src="./images/cover02.png" alt="" />
+                            </div>
+                            <div class="list_main">
+                                <ul class="list_tag">
+                                    <li>AR</li>
+                                    <li>VR</li>
+                                    <li>Headsets</li>
+                                </ul>
+                                <h2 class="list_title">
+                                    Augmented World Expo 2022
+                                </h2>
+                                <p class="list_text">
+                                    Lorem Ipsum is simply dummy text of the
+                                    printing and typesetting industry.
+                                </p>
+                            </div>
+                            <div class="list_footer">
+                                <div class="footer_contents">
+                                    <div class="footer_text">14 members</div>
+                                    <div class="footer_icon">
+                                        <img
+                                            src="./images/people01.png"
+                                            alt=""
+                                        />
+                                        <img
+                                            src="./images/people02.png"
+                                            alt=""
+                                        />
+                                        <img
+                                            src="./images/people03.png"
+                                            alt=""
+                                        />
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                        <section class="contents_list">
+                            <div class="list_img">
+                                <img src="./images/cover01.png" alt="" />
+                            </div>
+                            <div class="list_main">
+                                <ul class="list_tag">
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>JavaScript</li>
+                                </ul>
+                                <h2 class="list_title">
+                                    Digital Workplace Experience
+                                </h2>
+                                <p class="list_text">
+                                    It is a long established fact that a reader
+                                    will be distracted by the readable content
+                                    of a page when looking at its layout. The
+                                    point of using Lorem Ipsum is that it has a
+                                    more-or-less normal distribution of letters.
+                                </p>
+                            </div>
+                            <div class="list_footer">
+                                <div class="footer_contents">
+                                    <div class="footer_text">124 members</div>
+                                    <div class="footer_icon">
+                                        <img
+                                            src="./images/people04.png"
+                                            alt=""
+                                        />
+                                        <img
+                                            src="./images/people05.png"
+                                            alt=""
+                                        />
+                                        <img
+                                            src="./images/people06.png"
+                                            alt=""
+                                        />
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
