세부사항 손봄

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
                         </div>
                     </header>
                     <div class="card_wrapper">
-                        <section class="card">
-                            <div class="card-img">
+                        <section class="card_top">
+                            <div class="card_img">
                                 <img src="./images/photo01 2.png" alt="" />
-                                <div class="img-back">
+                                <div class="img_back">
                                     <h2>Rest</h2>
                                 </div>
                             </div>
-                            <div class="card-text">
+                            <div class="card_text">
                                 <h2>Take a rest</h2>
                                 <ul>
                                     <li>
@@ -51,14 +51,14 @@
                                 </ul>
                             </div>
                         </section>
-                        <section class="card">
-                            <div class="card-img">
+                        <section class="card_top">
+                            <div class="card_img">
                                 <img src="./images/photo02 2.png" alt="" />
-                                <div class="img-back">
+                                <div class="img_back">
                                     <h2>Craft</h2>
                                 </div>
                             </div>
-                            <div class="card-text">
+                            <div class="card_text">
                                 <h2>Build something</h2>
                                 <ul>
                                     <li>
@@ -77,14 +77,14 @@
                                 </ul>
                             </div>
                         </section>
-                        <section class="card">
-                            <div class="card-img">
+                        <section class="card_top">
+                            <div class="card_img">
                                 <img src="./images/photo03 2.png" alt="" />
-                                <div class="img-back">
+                                <div class="img_back">
                                     <h2>Scrap</h2>
                                 </div>
                             </div>
-                            <div class="card-text">
+                            <div class="card_text">
                                 <h2>Reference</h2>
                                 <ul>
                                     <li>
@@ -121,20 +121,20 @@
                         <button class="add_btn">+ ADD TO CALENDAR</button>
                     </header>
                     <div class="card_wrapper">
-                        <section class="contents_list">
-                            <div class="list_img">
+                        <section class="card_bottom">
+                            <div class="card_img">
                                 <img src="./images/cover01.png" alt="" />
                             </div>
-                            <div class="list_main">
-                                <ul class="list_tag">
+                            <div class="card_main">
+                                <ul class="card_tag">
                                     <li>HTML</li>
                                     <li>CSS</li>
                                     <li>JavaScript</li>
                                 </ul>
-                                <h2 class="list_title">
+                                <h2 class="card_title">
                                     Digital Workplace Experience
                                 </h2>
-                                <p class="list_text">
+                                <p class="card_text">
                                     It is a long established fact that a reader
                                     will be distracted by the readable content
                                     of a page when looking at its layout. The
@@ -142,31 +142,31 @@
                                     more-or-less normal distribution of letters.
                                 </p>
                             </div>
-                            <div class="list_footer">
+                            <div class="card_footer">
                                 <div class="footer_contents">
                                     <div class="footer_text">CLOSED</div>
                                 </div>
                             </div>
                         </section>
-                        <section class="contents_list">
-                            <div class="list_img">
+                        <section class="card_bottom">
+                            <div class="card_img">
                                 <img src="./images/cover02.png" alt="" />
                             </div>
-                            <div class="list_main">
-                                <ul class="list_tag">
+                            <div class="card_main">
+                                <ul class="card_tag">
                                     <li>AR</li>
                                     <li>VR</li>
                                     <li>Headsets</li>
                                 </ul>
-                                <h2 class="list_title">
+                                <h2 class="card_title">
                                     Augmented World Expo 2022
                                 </h2>
-                                <p class="list_text">
+                                <p class="card_text">
                                     Lorem Ipsum is simply dummy text of the
                                     printing and typesetting industry.
                                 </p>
                             </div>
-                            <div class="list_footer">
+                            <div class="card_footer">
                                 <div class="footer_contents">
                                     <div class="footer_text">14 members</div>
                                     <div class="footer_icon">
@@ -186,28 +186,24 @@
                                 </div>
                             </div>
                         </section>
-                        <section class="contents_list">
-                            <div class="list_img">
-                                <img src="./images/cover01.png" alt="" />
+                        <section class="card_bottom">
+                            <div class="card_img">
+                                <img src="./images/cover03.png" alt="" />
                             </div>
-                            <div class="list_main">
-                                <ul class="list_tag">
-                                    <li>HTML</li>
-                                    <li>CSS</li>
-                                    <li>JavaScript</li>
+                            <div class="card_main">
+                                <ul class="card_tag">
+                                    <li>Photoshop</li>
+                                    <li>Illustrator</li>
                                 </ul>
-                                <h2 class="list_title">
-                                    Digital Workplace Experience
-                                </h2>
-                                <p class="list_text">
-                                    It is a long established fact that a reader
-                                    will be distracted by the readable content
-                                    of a page when looking at its layout. The
-                                    point of using Lorem Ipsum is that it has a
-                                    more-or-less normal distribution of letters.
+                                <h2 class="card_title">Adobe Summit</h2>
+                                <p class="card_text">
+                                    printing and typesetting industry. Lorem
+                                    Ipsum has been the industry's standard dummy
+                                    text ever since the 1500s, when an unknown
+                                    printer took a galley.
                                 </p>
                             </div>
-                            <div class="list_footer">
+                            <div class="card_footer">
                                 <div class="footer_contents">
                                     <div class="footer_text">124 members</div>
                                     <div class="footer_icon">
