반응형 구조 좀 더 자연스럽게 변경

--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
                         <section class="card_bottom">
                             <div class="card_img">
                                 <img src="./images/cover01.png" alt="" />
+                                <img
+                                    class="ribbon"
+                                    src="./images/badge.png"
+                                    alt=""
+                                />
                             </div>
                             <div class="card_main">
                                 <ul class="card_tag">
